--- a/Downloading_Data_in_Python.ipynb
+++ b/Downloading_Data_in_Python.ipynb
@@ -121,11 +121,7 @@
       "metadata": {
         "id": "FhySg3lTemgZ",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 54
-        },
-        "outputId": "ea264fe2-6c8d-416e-fdcf-969498f722bf"
+        "colab": {}
       },
       "source": [
         "import csv   # Import csv module #\n",
@@ -138,16 +134,8 @@
         "\n",
         "  # you can see below the headers contain meaningful weather-related information each line of data holds # "
       ],
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "['AKDT', 'Max TemperatureF', 'Mean TemperatureF', 'Min TemperatureF', 'Max Dew PointF', 'MeanDew PointF', 'Min DewpointF', 'Max Humidity', ' Mean Humidity', ' Min Humidity', ' Max Sea Level PressureIn', ' Mean Sea Level PressureIn', ' Min Sea Level PressureIn', ' Max VisibilityMiles', ' Mean VisibilityMiles', ' Min VisibilityMiles', ' Max Wind SpeedMPH', ' Mean Wind SpeedMPH', ' Max Gust SpeedMPH', 'PrecipitationIn', ' CloudCover', ' Events', ' WindDirDegrees']\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -181,11 +169,7 @@
       "metadata": {
         "id": "tbQebqe-lQfE",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 425
-        },
-        "outputId": "f4ed46d9-43a7-416a-fb06-d2da80d35664"
+        "colab": {}
       },
       "source": [
         "import csv   \n",
@@ -200,38 +184,8 @@
         "# we will see in the results the dates and their high temperatures are stored in columns 0 and 1 #\n",
         "# to explore this data , we will process each row of data and extract the values with indices of 0 and 1 #"
       ],
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "0 AKDT\n",
-            "1 Max TemperatureF\n",
-            "2 Mean TemperatureF\n",
-            "3 Min TemperatureF\n",
-            "4 Max Dew PointF\n",
-            "5 MeanDew PointF\n",
-            "6 Min DewpointF\n",
-            "7 Max Humidity\n",
-            "8  Mean Humidity\n",
-            "9  Min Humidity\n",
-            "10  Max Sea Level PressureIn\n",
-            "11  Mean Sea Level PressureIn\n",
-            "12  Min Sea Level PressureIn\n",
-            "13  Max VisibilityMiles\n",
-            "14  Mean VisibilityMiles\n",
-            "15  Min VisibilityMiles\n",
-            "16  Max Wind SpeedMPH\n",
-            "17  Mean Wind SpeedMPH\n",
-            "18  Max Gust SpeedMPH\n",
-            "19 PrecipitationIn\n",
-            "20  CloudCover\n",
-            "21  Events\n",
-            "22  WindDirDegrees\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -250,11 +204,7 @@
       "metadata": {
         "id": "FOoy9WonnjP0",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "002e8229-4145-4080-fe14-c500c702f55f"
+        "colab": {}
       },
       "source": [
         "import csv\n",
@@ -270,21 +220,88 @@
         "    highs.append(row[1])\n",
         "\n",
         "  print(highs)\n",
-        "  \n",
+        "\n",
         "# the reder object continues where it last left off in te CSV file and automatically returns each line following its current position #\n",
         "# because we already read in the header row above, the loop begins at 2nd line where the actual data begins #\n",
-        "# as you can see below, we extracted the high temperature for each date and stoired them in a list as STRINGS ...This need to be converted to numbers. #"
+        "# as you can see below, we extracted the high temperature for each date and stoired them in a list as STRINGS(' ') ...This need to be converted to numbers. #"
       ],
-      "execution_count": 8,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "['64', '71', '64', '59', '69', '62', '61', '55', '57', '61', '57', '59', '57', '61', '64', '61', '59', '63', '60', '57', '69', '63', '62', '59', '57', '57', '61', '59', '61', '61', '66']\n"
-          ],
-          "name": "stdout"
-        }
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "K0lTa7UErM_C",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import csv\n",
+        "\n",
+        "filename = \"/content/drive/My Drive/sitka_weather_07-2014.csv\"  \n",
+        "with open (filename) as f:  \n",
+        "  reader = csv.reader(f) \n",
+        "  header_row = next(reader) \n",
+        "  \n",
+        "  highs = []  \n",
+        "  for row in reader:  \n",
+        "    high = int(row[1])  #convert strings to numbers #\n",
+        "    highs.append(high)\n",
+        "\n",
+        "  print(highs)\n",
+        "  # as you can see now they are numbers and not strings #\n",
+        "  # Now were ready to visualize the data #"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "b04FE42Dsdcl",
+        "colab_type": "text"
+      },
+      "source": [
+        "##**Plotting data in a Temperature chart** \n",
+        "\n",
+        "to visualize the temperature data we have, Lets first creat a simple plot of the daily highs using matplotlib "
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xlNzR5Tqs1fs",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import csv\n",
+        "from matplotlib import pyplot as plt\n",
+        "\n",
+        "# get high temperatures from file #\n",
+        "filename = \"/content/drive/My Drive/sitka_weather_07-2014.csv\"  \n",
+        "with open (filename) as f:  \n",
+        "  reader = csv.reader(f) \n",
+        "  header_row = next(reader) \n",
+        "  \n",
+        "  highs = []  \n",
+        "  for row in reader:  \n",
+        "    high = int(row[1])  \n",
+        "    highs.append(high)\n",
+        "\n",
+        "# plot data #\n",
+        "fig = plt.figure(dpi=128, figsize=(10, 6))\n",
+        "plt.plot(highs, c='red')\n",
+        "#Format plot #\n",
+        "plt.title(\"Daily high temperatures, July 2014\", fontsize=24)\n",
+        "plt.xlabel('', fontsize=16)\n",
+        "plt.ylabel(\"Temperature (f)\", fontsize=16)\n",
+        "plt.tick_params(axis='both', which='major', labelsize=16)\n",
+        "\n",
+        "plt.show()"
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
