--- a/Downloading_and_Exploring_Data_in_Python.ipynb
+++ b/Downloading_and_Exploring_Data_in_Python.ipynb
@@ -6,6 +6,7 @@
       "name": "Downloading and Exploring Data in Python.ipynb",
       "provenance": [],
       "collapsed_sections": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,9 +36,9 @@
         "\n",
         "![alt text](https://www.prospecta.com/images/data-science-banner.jpg)\n",
         "\n",
-        "In this section, we will download data sets from online sources and create working visualizations of that data . the ability to analyze data allows you to discovered patterns in the data that no one knew was there. We will access and visualize data in two common data formats (**CSV and JSON**). We will urilize the python CSV module to process weather data stored in CSV format. We will then utilize Matplotlib to generate a chart based upon the downloaded data.\n",
+        "In this section, we will download data sets from online sources and create working visualizations of that data . the ability to analyze data allows you to discovered patterns in the data that no one knew were there. We will access and visualize data in two common data formats (**CSV and JSON**). We will utilize the python **CSV module** to process weather data stored in CSV format. We will then utilize Matplotlib to generate a chart based upon the downloaded data.\n",
         "\n",
-        "We will also use the JSON module to access data stored in JSON format and us Pygal to population map by country. "
+        "We will also use the JSON module to access data stored in JSON format and us Pygal to create a population map by country. "
       ]
     },
     {
@@ -333,16 +334,16 @@
         "  reader = csv.reader(f) \n",
         "  header_row = next(reader) \n",
         "  \n",
-        "  dates, highs = [], [] # added empty list for dates #  \n",
+        "  dates, highs = [], [] # added empty list for dates and high tempretures from the file #\n",
         "  for row in reader:  \n",
-        "    current_date = datetime.strptime(row[0], \"%Y-%m-%d\")  # for 4 digit year , make sure %Y is capitolized # \n",
-        "    dates.append(current_date)\n",
+        "    current_date = datetime.strptime(row[0], \"%Y-%m-%d\")  # Here  we convert the data containing the date information (row[0] to a datetime object  and append it to dates #\n",
+        "    dates.append(current_date) \n",
         "    high = int(row[1])  \n",
         "    highs.append(high)\n",
         "\n",
         "# plot data #\n",
         "fig = plt.figure(dpi=128, figsize=(10, 6))\n",
-        "plt.plot(dates, highs, c='red')  # add dates to plot #\n",
+        "plt.plot(dates, highs, c='red')  # here we pass the dates and high temperature values to plot #\n",
         "\n",
         "#Format plot #\n",
         "plt.title(\"Daily high temperatures, July 2014\", fontsize=24)\n",
